objects/ASI_CRM_Item_Group_BOM__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Item_Group_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Item Group BOMs (Item Group)</relationshipLabel>
        <relationshipName>Item_Group_BOMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Parent_c__c</fullName>
        <label>Parent Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Item Group BOMs</relationshipLabel>
        <relationshipName>Item_Group_BOMs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty_c__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Item Group BOM</label>
    <nameField>
        <displayFormat>BOM-{0000000}</displayFormat>
        <label>BOM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Group BOMs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Item_Group_BOM</fullName>
        <active>true</active>
        <label>CN Item Group BOM</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>